<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="fill_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/importWalletBtn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:drawableStart="@drawable/ic_file_import_24dp"
        android:drawablePadding="24dp"
        android:fontFamily="@font/source_sans_pro"
        android:gravity="center_vertical"
        android:text="@string/import_wallet"
        android:textColor="@color/blockDarkGrayText"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/createNewWalletBtn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:drawableStart="@drawable/ic_add_gray_24dp"
        android:drawablePadding="24dp"
        android:fontFamily="@font/source_sans_pro"
        android:gravity="center_vertical"
        android:text="@string/create_new_wallet"
        android:textColor="@color/blockDarkGrayText"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/cancelBtn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:drawableStart="@drawable/ic_cancel_gray_24dp"
        android:drawablePadding="24dp"
        android:fontFamily="@font/source_sans_pro"
        android:gravity="center_vertical"
        android:text="@string/cancel"
        android:textColor="@color/blockDarkGrayText"
        android:textSize="18sp" />

</LinearLayout>
